--- a/FodboldApp/FodboldApp/FodboldApp.iOS/FodboldApp.iOS.csproj
+++ b/FodboldApp/FodboldApp/FodboldApp.iOS/FodboldApp.iOS.csproj
@@ -119,6 +119,9 @@
     <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Plugin.CrossPlatformTintedImage">
+      <Version>1.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.121934" />
   </ItemGroup>
   <ItemGroup>
