Clublist code optimized. Back button is added on the header

--- a/FodboldApp/FodboldApp/FodboldApp.iOS/FodboldApp.iOS.csproj
+++ b/FodboldApp/FodboldApp/FodboldApp.iOS/FodboldApp.iOS.csproj
@@ -128,6 +128,9 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.3.3</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms">
+      <Version>2.3.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Transformations">
       <Version>2.3.3</Version>
     </PackageReference>
@@ -258,6 +261,15 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\frontpage_background%403x.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\backbutton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\backbutton%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\backbutton%403x.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\FodboldApp\FodboldApp.projitems" Label="Shared" />
