--- a/FodboldApp/FodboldApp/FodboldApp.Android/FodboldApp.Android.csproj
+++ b/FodboldApp/FodboldApp/FodboldApp.Android/FodboldApp.Android.csproj
@@ -56,6 +56,9 @@
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.3.3</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms">
+      <Version>2.3.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Transformations">
       <Version>2.3.3</Version>
     </PackageReference>
@@ -259,6 +262,18 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxhdpi\frontpage_background.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\backbutton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xhdpi\backbutton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxhdpi\backbutton.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\backbutton.png" />
   </ItemGroup>
   <Import Project="..\FodboldApp\FodboldApp.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
