--- a/FodboldApp/FodboldApp/FodboldApp.Android/FodboldApp.Android.csproj
+++ b/FodboldApp/FodboldApp/FodboldApp.Android/FodboldApp.Android.csproj
@@ -303,6 +303,18 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxhdpi\up_arrow.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\notificationsbell.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-hdpi\notificationsbell.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xhdpi\notificationsbell.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxhdpi\notificationsbell.png" />
+  </ItemGroup>
   <Import Project="..\FodboldApp\FodboldApp.projitems" Label="Shared" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
