--- a/FodboldApp/FodboldApp/FodboldApp.iOS/Info.plist
+++ b/FodboldApp/FodboldApp/FodboldApp.iOS/Info.plist
@@ -50,5 +50,31 @@
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>FodboldApp</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeName</key>
+			<string>Document Type 1</string>
+		</dict>
+	</array>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>URL Type 1</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.yourcompany.FodboldApp</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>URL Type 2</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.274704195206-2pkc5lierlo45tqf72qadep4o0t70h0p</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
