--- a/FodboldApp/FodboldApp/FodboldApp.iOS/GoogleService-Info.plist
+++ b/FodboldApp/FodboldApp/FodboldApp.iOS/GoogleService-Info.plist
@@ -3,16 +3,26 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>274704195206-2pkc5lierlo45tqf72qadep4o0t70h0p.apps.googleusercontent.com</string>
+	<string>274704195206-bplkrfn3b07bg7ruq56dss998m8me93k.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.274704195206-2pkc5lierlo45tqf72qadep4o0t70h0p</string>
+	<string>com.googleusercontent.apps.274704195206-bplkrfn3b07bg7ruq56dss998m8me93k</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.yourcompany.FodboldApp</string>
+	<string>com.fifium.FodboldApp</string>
 	<key>PROJECT_ID</key>
 	<string>firebase-fodboldapp</string>
 	<key>IS_ADS_ENABLED</key>
-	<false/>
+	<false></false>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false></false>
+	<key>IS_APPINVITE_ENABLED</key>
+	<false></false>
+	<key>IS_GCM_ENABLED</key>
+	<false></false>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true></true>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:274704195206:ios:3732f9d75a3db124</string>
 </dict>
 </plist>
