--- a/FodboldApp/FodboldApp/FodboldApp.iOS/Info.plist
+++ b/FodboldApp/FodboldApp/FodboldApp.iOS/Info.plist
@@ -25,7 +25,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>FodboldApp</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.yourcompany.FodboldApp</string>
+	<string>com.fifium.FodboldApp</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>CFBundleIconFiles</key>
