--- a/FodboldApp/FodboldApp/FodboldApp.iOS/FodboldApp.iOS.csproj
+++ b/FodboldApp/FodboldApp/FodboldApp.iOS/FodboldApp.iOS.csproj
@@ -135,6 +135,9 @@
     <PackageReference Include="Realm">
       <Version>2.0.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Net.Http">
+      <Version>4.3.3</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle">
       <Version>2.0.1</Version>
     </PackageReference>
@@ -273,15 +276,6 @@
     <BundleResource Include="Resources\google_plus_icon%403x.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\frontpage_background.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\frontpage_background%402x.jpg" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\frontpage_background%403x.jpg" />
-  </ItemGroup>
-  <ItemGroup>
     <BundleResource Include="Resources\backbutton.png" />
   </ItemGroup>
   <ItemGroup>
@@ -327,6 +321,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
+    <BundleResource Include="Resources\frontpage_background.png" />
+    <BundleResource Include="Resources\frontpage_background%402x.png" />
+    <BundleResource Include="Resources\frontpage_background%403x.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\FodboldApp\FodboldApp.projitems" Label="Shared" />
