--- a/FodboldApp/FodboldApp/FodboldApp.Android/Properties/AndroidManifest.xml
+++ b/FodboldApp/FodboldApp/FodboldApp.Android/Properties/AndroidManifest.xml
@@ -1,14 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.fifium.FodboldApp" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="15" />
-  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-  <uses-permission android:name="android.permission.INTERNET" />
-  <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-  <uses-permission android:name="com.fifium.FodboldApp.permission.C2D_MESSAGE" />
-    <permission android:name="com.fifium.FodboldApp.permission.C2D_MESSAGE" 
-                android:protectionLevel="signature" />
-	<application android:label="FodboldApp.Android"></application>
+	<uses-permission android:name="com.fifium.FodboldApp.permission.C2D_MESSAGE" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+  <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+  <permission android:name="com.fifium.FodboldApp.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+	<application android:label="FodboldApp.Android">
+    <receiver android:name="com.onesignal.GcmBroadcastReceiver"
+           android:permission="com.google.android.c2dm.permission.SEND" >
+      <intent-filter>
+        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+        <category android:name="com.fifium.FodboldApp" />
+      </intent-filter>
+    </receiver>
+  </application>
 </manifest>
