--- a/FodboldApp/FodboldApp/FodboldApp.iOS/FodboldApp.iOS.csproj
+++ b/FodboldApp/FodboldApp/FodboldApp.iOS/FodboldApp.iOS.csproj
@@ -156,6 +156,9 @@
     <PackageReference Include="System.Runtime.InteropServices">
       <Version>4.3.0</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugin.Connectivity">
+      <Version>3.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle">
       <Version>2.0.2</Version>
     </PackageReference>
