--- a/FodboldApp/FodboldApp/FodboldApp.iOS/FodboldApp.iOS.csproj
+++ b/FodboldApp/FodboldApp/FodboldApp.iOS/FodboldApp.iOS.csproj
@@ -260,15 +260,6 @@
     <BundleResource Include="Resources\mangekampe%403x.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\tidligere_kampe.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\tidligere_kampe%402x.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <BundleResource Include="Resources\tidligere_kampe%403x.png" />
-  </ItemGroup>
-  <ItemGroup>
     <BundleResource Include="Resources\tidligere_spillere.png" />
   </ItemGroup>
   <ItemGroup>
@@ -356,6 +347,9 @@
     <BundleResource Include="Resources\frontpage_background.png" />
     <BundleResource Include="Resources\frontpage_background%402x.png" />
     <BundleResource Include="Resources\frontpage_background%403x.png" />
+    <BundleResource Include="Resources\settings.png" />
+    <BundleResource Include="Resources\settings%402x.png" />
+    <BundleResource Include="Resources\settings%403x.png" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
