--- a/FodboldApp/FodboldApp/FodboldApp.Android/Properties/AndroidManifest.xml
+++ b/FodboldApp/FodboldApp/FodboldApp.Android/Properties/AndroidManifest.xml
@@ -9,15 +9,14 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="com.fifium.FodboldApp.permission.C2D_MESSAGE" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
-  <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-  <permission android:name="com.fifium.FodboldApp.permission.C2D_MESSAGE" android:protectionLevel="signature" />
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	<permission android:name="com.fifium.FodboldApp.permission.C2D_MESSAGE" android:protectionLevel="signature" />
 	<application android:label="FodboldApp.Android">
-    <receiver android:name="com.onesignal.GcmBroadcastReceiver"
-           android:permission="com.google.android.c2dm.permission.SEND" >
-      <intent-filter>
-        <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-        <category android:name="com.fifium.FodboldApp" />
-      </intent-filter>
-    </receiver>
-  </application>
+		<receiver android:name="com.onesignal.GcmBroadcastReceiver" android:permission="com.google.android.c2dm.permission.SEND">
+			<intent-filter>
+				<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				<category android:name="com.fifium.FodboldApp" />
+			</intent-filter>
+		</receiver>
+	</application>
 </manifest>
